[gi] make parameter check less strict when dealing with GValue params

* Some GValue API can store a pointer to a python object for later
  use but our parameter checking was too strict to allow this
* Add pyg_type_from_object_strict API which takes a strict boolean and
  returns PY_TYPE_OBJECT if no other GType can be found
* Since we don't have enough info to genrically check GValue parameters
  use the less strict type guessing when encountering a GValue param
* Other API stays the same and continues to do strict testing

https://bugzilla.gnome.org/show_bug.cgi?id=622987